[package]
name = "compiler-optimize"
version = "0.1.0"
authors = ["Larry850806 <pudding850806@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
